src/test/ui/error-codes/E0070.stderr
error[E0070]: invalid left-hand side expression
  --> $DIR/E0070.rs:6:5
   |
LL |     SOME_CONST = 14;
   |     ^^^^^^^^^^^^^^^ left-hand of expression not valid

error[E0070]: invalid left-hand side expression
  --> $DIR/E0070.rs:7:5
   |
LL |     1 = 3;
   |     ^^^^^ left-hand of expression not valid

error[E0308]: mismatched types
  --> $DIR/E0070.rs:8:25
   |
LL |     some_other_func() = 4;
   |                         ^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error[E0070]: invalid left-hand side expression
  --> $DIR/E0070.rs:8:5
   |
LL |     some_other_func() = 4;
   |     ^^^^^^^^^^^^^^^^^^^^^ left-hand of expression not valid

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0070, E0308.
For more information about an error, try `rustc --explain E0070`.
